--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,15 @@
 		<style>
 			.board {
 				display: grid;
-				grid-template-rows: repeat(10, 3rem);
-				grid-template-columns: repeat(10, 3rem);
+				grid-template-rows: repeat(10, 9vmin);
+				grid-template-columns: repeat(10, 9vmin);
 			}
 
 			.cell {
+				font-size: 6vmin;
 				margin: 0 0 1px 1px;
 				border: 1px solid black;
-				line-height: 3rem;
+				line-height: 9vmin;
 				text-align: center;
 			}
 		</style>
